Fix issue with social networking icons being too close to media slider widget.

--- a/web/themes/custom/psyren_theme/sass/_global-styles.scss
+++ b/web/themes/custom/psyren_theme/sass/_global-styles.scss
@@ -261,3 +261,10 @@ abbr.ajax-changed {
   height: 7px;
   width: 7px;
 }
+
+.share-everywhere { 
+  .se-block {
+    position:relative;
+    top:25px; /* nudge social network buttons down */
+  }
+}
